check_output.txt
learning-engine\src\lib.rs:313:9: warning: unused import: `std::time::Duration`
learning-engine\src\lib.rs:314:9: warning: unused import: `tokio::time::interval`
learning-engine\src\orchestrator.rs:2:5: warning: unused import: `std::time::Duration`
learning-engine\src\orchestrator.rs:4:5: warning: unused import: `tokio::time::interval`
learning-engine\src\orchestrator.rs:7:13: warning: unused imports: `ABTestResult`, `ABTester`, and `ExecutionLog`
learning-engine\src\offline_validator.rs:1:14: warning: unused import: `Duration`
learning-engine\src\prompt_optimizer.rs:5:5: warning: unused import: `crate::diff_analyzer::ModificationPattern`
learning-engine\src\n8n_validator.rs:2:5: warning: unused import: `std::collections::HashMap`
learning-engine\src\monitor.rs:4:5: warning: unused import: `std::time::Duration`
learning-engine\src\scheduler.rs:66:39: warning: variable does not need to be mutable
learning-engine\src\scheduler.rs:150:44: warning: variable does not need to be mutable
learning-engine\src\federated.rs:288:17: warning: variable does not need to be mutable
learning-engine\src\orchestrator.rs:145:44: warning: unused variable: `patterns`: help: if this is intentional, prefix it with an underscore: `_patterns`
learning-engine\src\param_optimizer.rs:99:18: warning: unused variable: `i`: help: if this is intentional, prefix it with an underscore: `_i`
learning-engine\src\param_optimizer.rs:218:9: warning: unused variable: `workflow_id`: help: if this is intentional, prefix it with an underscore: `_workflow_id`
learning-engine\src\scheduler.rs:83:38: warning: unused variable: `seconds`: help: try ignoring the field: `seconds: _`
learning-engine\src\scheduler.rs:150:44: warning: unused variable: `callback`: help: if this is intentional, prefix it with an underscore: `_callback`
learning-engine\src\decision.rs:142:13: warning: variable `approve_count` is assigned to, but never used
learning-engine\src\decision.rs:190:13: warning: value assigned to `approve_count` is never read
learning-engine\src\hyperopt_auto.rs:273:52: warning: unused variable: `params`: help: if this is intentional, prefix it with an underscore: `_params`
learning-engine\src\hyperopt_auto.rs:274:13: warning: unused variable: `current`: help: if this is intentional, prefix it with an underscore: `_current`
learning-engine\src\fine_tune_loop.rs:244:13: warning: unused variable: `current`: help: if this is intentional, prefix it with an underscore: `_current`
learning-engine\src\auto_deployer.rs:194:9: warning: field `n8n_json` is never read
learning-engine\src\strategy_updater.rs:81:5: warning: field `discount_factor` is never read
learning-engine\src\n8n_validator.rs:29:5: warning: fields `id`, `error_type`, and `severity` are never read
learning-engine\src\hyperopt_auto.rs:106:5: warning: field `calculated_at` is never read
learning-engine\src\impact_analyzer.rs:57:5: warning: field `cost_per_manual_hour` is never read
learning-engine\src\federated.rs:238:5: warning: field `aggregation_method` is never read
learning-engine\src\hyperopt_auto.rs:291:9: warning: calls to `std::mem::drop` with a reference instead of an owned value does nothing
warning: `learning-engine` (lib) generated 29 warnings (run `cargo fix --lib -p learning-engine` to apply 20 suggestions)
    Checking learning-engine v0.1.0 (D:\ķÅéÕø”µ¼ó\ń╝āµłĀńÅ»\strueauto.com\MemFlow\learning-engine)
error[E0716]: temporary value dropped while borrowed
   --> learning-engine\src\main.rs:157:55
    |
157 |                 let logs = data.as_array().unwrap_or(&Vec::new());
    |                                                       ^^^^^^^^^^ - temporary value is freed at the end of this statement
    |                                                       |
    |                                                       creates a temporary value which is freed while still in use
...
160 |                 for log in logs {
    |                            ---- borrow later used here
    |
    = note: consider using a `let` binding to create a longer lived value

error[E0560]: struct `SystemMetrics` has no field named `avg_duration_ms`
  --> learning-engine\src\main.rs:94:21
   |
94 |                     avg_duration_ms: avg_duration,
   |                     ^^^^^^^^^^^^^^^ `SystemMetrics` does not have this field
   |
   = note: available fields are: `avg_response_time_ms`, `token_consumption`, `optimization_count`, `timestamp`

error[E0560]: struct `SystemMetrics` has no field named `error_rate`
  --> learning-engine\src\main.rs:95:21
   |
95 |                     error_rate: 1.0 - success_rate,
   |                     ^^^^^^^^^^ `SystemMetrics` does not have this field
   |
   = note: available fields are: `avg_response_time_ms`, `token_consumption`, `optimization_count`, `timestamp`

Some errors have detailed explanations: E0560, E0716.
For more information about an error, try `rustc --explain E0560`.
error: could not compile `learning-engine` (bin "learning-engine") due to 3 previous errors
